Fixed marker shape z-index behaviour

--- a/leaflet-beautify-marker-icon.css
+++ b/leaflet-beautify-marker-icon.css
@@ -14,6 +14,10 @@
     box-sizing: border-box;
 }
 
+.beautify-marker-wrapper {
+    position: absolute;
+}
+
     .beautify-marker.circle {
         border-radius: 100%;
     }
